<resources>
    <string name="app_name">플레이쿠라운드</string>
    <string name="ku_explore">건대 탐험</string>
    <string name="ku_quiz">건쏠지식</string>
    <string name="ku_timer">10초를 맞춰봐</string>
    <string name="ku_moon">문을 점령해</string>
    
    <string name="police_agree">회원가입</string>
    <string name="intro_agree">서비스 이용을 위한 약관에 동의해주세요.</string>
    <string name="major_choice">소속 대학 및 학과를 선택해주세요.</string>
    <string name="nickname_set">닉네임을 설정해주세요.</string>
    <string name="nickname_input">닉네임을 입력해주세요.</string>
    <string name="nickname_sub">- 닉네임은 한/영 2자에서 8자 사이로 설정 가능합니다.\n- 띄어쓰기와 특수문자 사용이 불가합니다.\n- 부적절한 단어 사용시 추후 사용이 정지될 수 있습니다.</string>
    <string name="home_sub_title">건국대 안의 놀이터,</string>
    <string name="home_title">플레이쿠라운드</string>

    <string name="login">로그인</string>
    <string name="greeting">안녕하세요!</string>
    <string name="certify_email">건국대학교 이메일을 인증해주세요.</string>
    <string name="portal_id">포탈아이디</string>
    <string name="konkuk_address">\@konkuk.ac.kr</string>
    <string name="request_code">인증코드 요청</string>
    <string name="request_code_again">인증코드 재요청</string>
    <string name="go_to_konkuk_email">건국대학교 이메일 바로가기</string>
    <string name="certify_code">인증코드</string>
    <string name="certify">인증하기</string>
    <string name="warn_not_equal">입력하신 인증코드가 일치하지 않습니다.</string>

    <string name="home_check">출석 체크</string>
    <string name="home_sub_check">건국대학교에 어서오세요!</string>
    <string name="home_adventure">건대 탐험</string>
    <string name="home_sub_adventure">건국대학교안의 랜드마크를 탐험해보세요!</string>
    <string name="agree_01">이용약관</string>
    <string name="agree_sub_01">플레이쿠라운드 서비스 이용약관</string>
    <string name="rank_info">출석 체크 : 1점\n\n탐험 1개 완료 : 5점\n\n추가 탐험(모든 탐험 완료 후) : 1점</string>

    <string name="check_attendance">출석체크</string>
    <string name="latest_30">최근 30일</string>
    <string name="attendance">출석하기</string>

    <string name="badge">배지</string>
    <string name="badge_attendance">출석 배지</string>
    <string name="badge_adventure">탐험 배지</string>

    <string name="mypage">마이페이지</string>
    <string name="mypage_my">마이</string>
    <string name="mypage_go">바로가기</string>
    <string name="mypage_service">이용안내</string>
    <string name="mypage_story">스토리 다시보기</string>
    <string name="mypage_see_advertisement">플쿠팀 응원하기</string>
    <string name="mypage_instar">플레이쿠라운드 인스타그램</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_app_version">앱 버전</string>
    <string name="mypage_privacy">개인정보 처리 방침</string>
    <string name="mypage_terms_of_service">이용약관</string>
    <string name="mypage_feedback">피드백 보내기</string>
    <string name="mypage_send_error">오류 / 버그 제보 및 정보 제공</string>

    <string name="ranking">랭킹</string>
    <string name="ranking_index">순위</string>
    <string name="ranking_nickname">닉네임</string>
    <string name="ranking_score">점수</string>
    <string name="ranking_me">나</string>
    
    <string name="quiz_again_text">오답입니다.\n15초 후에 다시 시도해주세요.</string>
    <string name="dialog_get_badge_rank">정복 랭킹</string>
    <string name="dialog_get_badge_visit">가장 많이 방문한 사람은</string>
    <string name="dialog_place_info_conquest">정복!</string>

    <string name="quiz_correct_dialog">정답입니다!</string>
    <string name="quiz_wrong_dialog">오답입니다.\n다시 시도해보세요!</string>

    <string name="map_place_rank_dialog">방문자 랭킹</string>
    <string name="map_place_info_dialog">건물 설명</string>

    <string name="ranking_empty">아직 순위가 없습니다.\n지금 1위에 도전해보세요!</string>

    <string name="pause_resume">계속하기</string>
    <string name="pause_home">홈</string>
    
    <string name="timer">TIME</string>

    <string name="card_flipping">책 뒤집기</string>
    <string name="catch_duck">덕쿠를 잡아라</string>
    <string name="typing_game">수강신청 All 클릭</string>
    <string name="bridge_timing">덕큐피트</string>
    <string name="avoid_obstacle">일감호에서 살아남기</string>

</resources>