<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_skyblue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="450dp"
        app:layout_constraintHeight_max="900dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/greeting"
            android:fontFamily="@font/neo_dunggeunmo_regular"
            android:textSize="29dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="91dp"
            android:id="@+id/email_greeting_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/email_greeting_tv"
            app:layout_constraintTop_toBottomOf="@+id/email_greeting_tv"
            android:text="@string/certify_email"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="19dp"
            android:layout_marginTop="10dp"
            android:id="@+id/email_certify_email_tv"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_certify_email_tv"
            app:layout_constraintDimensionRatio="343:50"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/edit_text"
            android:id="@+id/email_get_email_cl">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/email_konkuk_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="18dp"
                android:background="@color/transparent"
                android:fontFamily="@font/pretendard_medium"
                android:textSize="15dp"
                android:textAlignment="textStart"
                android:maxLines="1"
                android:id="@+id/email_get_email_et"
                android:hint="@string/portal_id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/konkuk_address"
                android:fontFamily="@font/pretendard_medium"
                android:textSize="15dp"
                android:textColor="@color/light_gray"
                android:layout_marginEnd="18dp"
                android:id="@+id/email_konkuk_tv"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/email_get_email_cl"
            app:layout_constraintEnd_toEndOf="@id/email_get_email_cl"
            app:layout_constraintTop_toBottomOf="@id/email_get_email_cl"
            android:layout_marginTop="10dp"
            app:layout_constraintDimensionRatio="343:50"
            android:id="@+id/email_request_code_btn"
            android:background="@drawable/button_blue"
            android:text="@string/request_code"
            android:fontFamily="@font/pretendard_semi_bold"
            android:textSize="15dp"
            android:textColor="@color/button_blue"
            android:enabled="false"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/email_request_code_btn"
            app:layout_constraintTop_toBottomOf="@id/email_request_code_btn"
            android:layout_marginTop="10dp"
            android:text="@string/go_to_konkuk_email"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="#6496B0"
            android:textSize="13dp"
            android:id="@+id/email_goto_konkuk_email_tv"
            android:background="@drawable/green_underline"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/email_request_code_btn"
            app:layout_constraintEnd_toEndOf="@id/email_request_code_btn"
            app:layout_constraintTop_toBottomOf="@+id/email_goto_konkuk_email_tv"
            app:layout_constraintDimensionRatio="343:50"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text"
            android:id="@+id/email_input_code_cl"
            android:visibility="gone">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:background="@color/transparent"
                android:fontFamily="@font/pretendard_medium"
                android:textSize="15dp"
                android:hint="@string/certify_code"
                android:textColorHint="@color/light_gray"
                android:textAlignment="textStart"
                android:maxLines="1"
                android:maxLength="6"
                android:id="@+id/email_input_code_et"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="05:00"
                android:fontFamily="@font/pretendard_medium"
                android:textSize="15dp"
                android:textColor="@color/light_gray"
                android:layout_marginEnd="18dp"
                android:id="@+id/email_certify_timer"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/email_certify_btn"
            app:layout_constraintTop_toBottomOf="@id/email_certify_btn"
            android:layout_marginTop="10dp"
            android:text="@string/warn_not_equal"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/red"
            android:textSize="13dp"
            android:id="@+id/email_warn_not_equal_tv"
            android:visibility="gone"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/email_input_code_cl"
            app:layout_constraintEnd_toEndOf="@id/email_input_code_cl"
            app:layout_constraintTop_toBottomOf="@id/email_input_code_cl"
            android:layout_marginTop="10dp"
            app:layout_goneMarginTop="10dp"
            app:layout_constraintDimensionRatio="343:50"
            android:id="@+id/email_certify_btn"
            android:background="@drawable/button_blue"
            android:text="@string/certify"
            android:fontFamily="@font/pretendard_semi_bold"
            android:textSize="15dp"
            android:textColor="@color/button_blue"
            android:enabled="false"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/email_certify_btn"
            app:layout_constraintTop_toBottomOf="@id/email_certify_btn"
            android:layout_marginTop="10dp"
            android:text="오늘 인증 요청 횟수가 4회 남았습니다."
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/light_gray"
            android:textSize="13dp"
            android:id="@+id/email_request_count_tv"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>