<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_skyblue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_max="450dp"
        app:layout_constraintHeight_max="900dp"
        android:id="@+id/attendance_container"
        android:background="@drawable/background_default">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/attendance_tab_bar">

            <ImageButton
                app:tint="@color/white"
                android:id="@+id/attendance_back_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="18dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/img_back"
                android:backgroundTint="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/check_attendance"
                android:fontFamily="@font/neo_dunggeunmo_regular"
                android:textSize="24dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/attendance_back_btn"
                app:layout_constraintBottom_toBottomOf="@+id/attendance_back_btn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <ImageView
            android:layout_width="336dp"
            android:layout_height="444dp"
            android:src="@drawable/img_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attendance_tab_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:id="@+id/attendance_calendar_iv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_30"
            android:textSize="21dp"
            android:fontFamily="@font/neo_dunggeunmo_regular"
            app:layout_constraintStart_toStartOf="@id/attendance_calendar_iv"
            app:layout_constraintEnd_toEndOf="@id/attendance_calendar_iv"
            app:layout_constraintTop_toTopOf="@id/attendance_calendar_iv"
            android:layout_marginTop="20dp"
            android:id="@+id/attendance_latest_tv"/>

        <TableLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/attendance_calendar_iv"
            app:layout_constraintEnd_toEndOf="@id/attendance_calendar_iv"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/attendance_latest_tv"
            android:id="@+id/attendance_calendar_container_tl">
        </TableLayout>

        <Button
            android:layout_width="160dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@id/attendance_calendar_container_tl"
            app:layout_constraintEnd_toEndOf="@id/attendance_calendar_container_tl"
            app:layout_constraintBottom_toBottomOf="@id/attendance_calendar_iv"
            android:layout_marginBottom="40dp"
            android:id="@+id/attendance_btn"
            android:background="@drawable/button_blue_small"
            android:text="@string/attendance"
            android:fontFamily="@font/neo_dunggeunmo_regular"
            android:textSize="19dp"
            android:textColor="@color/button_blue"
            android:enabled="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>